# C-collections

./: .clang-format  .gitignore  CMakeLists.txt  README.md  temp.rs
export/: assert.h  buffer.h  core.h  format.h  option.h  pair.h  panic.h  result.h  string.h
include/: assert.h  buffer.h  iterator.h  iterator_inner.h  pair.h  panic.h
include/core/: assert.h  container.h  log.h  logger.h  pair.h  panic.h  rc.h
src/: buffer.c  format.c  option.c  pair.c  result.c  string.c  vector.c
src/core/: CMakeLists.txt  log.c  pair.c  panic.c  rc.c
src/iterator/: filter.c  iterator.c  map.c
tests/: CMakeLists.txt  assert.c  assert.cc  log.cc  pair.cc  panic.c  panic.cc  rc.cc  test.c
